# wxmp-cracker-app

./: .gitignore  .gitmodules  .vercelignore  AGENTS.md  CHANGELOG.md  README.md  eslint.config.js  index.html  package.json  vercel.json  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: release.yml
api/: download.js  release.js
api/lovcode/auth/: poll.js  start.js
output/articles/: giac-2026-深圳-议程整理-2026-06-26.md  微探-群公告-2026-06-13-v0.1.md
public/: robots.txt  sitemap.xml
scripts/: build-wcx-sidecar.sh  generate-activation-code.mjs
src/: App.tsx  WorkspaceApp.tsx  index.css  main.tsx
src-tauri/: .tauri-updater-key.pub  Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  auth.rs  commands.rs  db.rs  github.rs  lib.rs  license.rs  main.rs  sync.rs
src-tauri/templates/archive-repo/: SITE_README.md  astro.config.mjs  package.json
src-tauri/templates/archive-repo/.github/workflows/: build.yml
src-tauri/templates/archive-repo/scripts/: build-rss.mjs
src-tauri/templates/archive-repo/src/layouts/: Base.astro
src-tauri/templates/archive-repo/src/pages/: index.astro
src/components/: account-sidebar.tsx  account-workspace.tsx  add-account-dialog.tsx  article-detail.tsx  article-list.tsx  github-sync-settings.tsx  license-admin-panel.tsx  license-gate.tsx  lovstudio-auth-dialog.tsx  quota-settings-panel.tsx  top-bar.tsx  wechat-capability-settings.tsx
src/components/ui/: dialog.tsx  dropdown-menu.tsx  scroll-area.tsx  switch.tsx
src/hooks/: useAuth.tsx  useAutoUpdate.ts  useWxmpGatewayWorker.ts
src/integrations/supabase/: client.ts  types.ts
src/lib/: api.ts  cloud-license.ts  gateway.ts  lovstudio-auth-service.ts  lovstudio-device-auth.ts  media.ts  quota.ts  toast.ts
src/pages/: Auth.tsx  AuthRoutes.tsx  CliAuthorize.tsx  Website.tsx
src/store/: authAtoms.ts
supabase/: wxmp_licenses.sql
