[package]
name = "wxmp-cracker"
version = "0.3.1"
description = "微探：微信公众号内容采集与洞察工作台，Powered by Lovstudio"
authors = ["lovstudio"]
edition = "2021"

[lib]
name = "wxmp_cracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-log = "2"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "stream", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["time", "fs", "io-util"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
slug = "0.1"
regex = "1"
keyring = "3"
include_dir = "0.7"
futures-util = "0.3"
urlencoding = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
